# testingGocodeo

./: CMakeLists.txt  README.md  coverage.info  generate_tests.py  go.mod  main.c  main.c.gcov  main.go  project.yml  temperature_sensor.c  temperature_sensor.h  test_main.c
.github/ISSUE_TEMPLATE/: ai-tests.md
.github/workflows/: ai-test-generation.yml  ci.yml  test-gocodeo.yml
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: index-sort-f.html  index-sort-l.html  index.html  main.c.func-c.html  main.c.func.html  main.c.gcov.html
coverage/test/: index-sort-f.html  index-sort-l.html  index.html  test_main.c.func-c.html  test_main.c.func.html  test_main.c.gcov.html
include/: main.h  math_ops.h  utils.h
scripts/: ai_test_generator.py
src/: main.c  math_ops.c  temperature_sensor.c  temperature_sensor.h  utils.c
test/: test_main.c  test_math_ops.c  test_temperature_sensor.c  test_utils.c
